# server/routes/usersRoute.js
@@ -1,11 +1,13 @@
 const express = require('express');
 const router = express.Router();
 const usersController = require('../controller/usersController');
+const authController = require('../controller/authController');
 
-router.get("/", usersController.getAllUsers);
-router.get("/:uid", usersController.getUserById);
-router.post("/", usersController.postUser);
-router.put("/:uid", usersController.putUser);
-router.delete("/:uid", usersController.deleteUser);
+
+router.get("/", authController.auth, usersController.getAllUsers);
+router.get("/:uid", authController.auth, usersController.getUserById);
+router.post("/", authController.auth, usersController.postUser);
+router.put("/:uid", authController.auth, usersController.putUser);
+router.delete("/:uid", authController.auth, usersController.deleteUser);
 
 module.exports = router;
